2003-12-13  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m-antenna.el (w3m-antenna-string): Renamed from
	`string-with-default'.
	(w3m-antenna-string-create): Renamed from
	`string-with-default-value-create'.
	(w3m-antenna-sites): Change its customize spec.

	* w3m-xmas.el (w3m-window-hscroll, w3m-current-column,
	w3m-set-window-hscroll): Import definitions from w3m.el.
	(w3m-run-at-time): Renamed from `w3m-xmas-run-at-time'.

	* w3m.el (w3m-window-hscroll, w3m-current-column,
	w3m-set-window-hscroll): Export definitions for XEmacs to
	w3m-xmas.el.

2003-12-12  Katsumi Yamaoka  <yamaoka@jpl.org>

	* aclocal.m4 (AC_SET_VANILLA_FLAG): New function specifying the
	`VANILLA_FLAG' variavle.  XEmacs 21.5 needs to be given `-vanilla'
	rather than `-q -no-site-file'.
	(AC_EMACS_LISP): Use `VANILLA_FLAG'.
	(AC_PATH_EMACS): Call `AC_SET_VANILLA_FLAG'.
	(AC_ADD_LOAD_PATH): Use `VANILLA_FLAG'.
	(AC_CHECK_ELISP): Ditto.

	* configure.in: Check for `EGREP' before calling `AC_PATH_EMACS'.

	* Makefile.in (VANILLA_FLAG): New variable.
	(FLAGS): Use it.
	(very-slow): Use it.

	* doc/Makefile.in (VANILLA_FLAG): New variable.
	(FLAGS): Use it.

	* w3m-xmas.el (w3m-xmas-run-at-time): Use a simple function
	definition if there is not a bug in `start-itimer'.

2003-12-11  KAMO Tomoyuki <kamo@ITmanage.co.jp>

	* octet.el (octet-suffix-type-alist): Add suffix of bzip-ed files.
	(octet-type-filter-alist): Add an entry of bzip2.
	(octet-guess-type-from-name): Relax the regular expression to
	detect suffix, in order to handle bzip-ed files.

2003-12-11  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el: Experimentally implement the estimation layer of
	relationships between pages.
	(w3m-relationship-estimate-rules): New option.
	(w3m-relationship-estimate, w3m-relationship-simple-estimate,
	w3m-relationship-magicpoint-estimate,
	w3m-relationship-search-patterns): New functions.
	(w3m-use-filter): Cancel the last change; its default value is
	changed to nil.
